# SearchFace

./: .clinerules  .cursorrules  .dockerignore  .env.sample  .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  conftest.py  database_schema.sql  docker-compose.yml  fly.toml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  sqlite_schema.sql  task-master-ai.config.js  taskmaster.config.json
.task/: connect-search-to-results-002.md  implement-ranking-features-001.md  implement-search-result-ui-001.md  implement-search-results-page-001.md  refactor-search-ranking-component-001.md  search-api-multi-face-error-001.md
docs/: api.md  db.md  design.md  frontend.md  principles.md  project.md  python.md  tasks.md
face_recognition_base/: Dockerfile  build-check.sh  build.sh  push.sh
frontend/: Dockerfile  Dockerfile.prod  biome.json  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
memory-bank/: activeContext.md  decisionLog.md  progress.md  projectContext.md
scripts/: cleanup_404_images.sh  cleanup_empty_dmm_dirs.sh
src/: check_database.py  cleanup_corrupted_data.py  collect_dmm_faces.py  collect_images.py  download_actress_thumbnails.py  face_comparison.py  face_database.py  face_detection.py  image_collector.py  main.py  partial_cleanup.py  populate_person_profiles.py  quick_integrity_test.py  rebuild_faiss_index.py  register_base_images.py  register_faces.py  retroactive_product_saver.py  run_api.py  save_actress_data.py  search_similar_faces.py  test_image_collector.py  update_existing_profiles.py
tests/: __init__.py  conftest.py
(+151 files in other folders)
