[project]
name = "SearchFace"
version = "0.1.0"
description = "顔検出と特徴抽出を行うPythonプロジェクト"
requires-python = ">=3.8"
dependencies = [
    "click==8.1.8",
    "dlib==19.24.8",
    "face-recognition==1.3.0",
    "face-recognition-models==0.3.0",
    "numpy==1.24.4",
    "opencv-python==4.11.0.86",
    "pillow==10.4.0"
]

[build-system]
requires = ["setuptools>=44.0.0"]
build-backend = "setuptools.build_meta" 