[project]
name = "searchface"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
dependencies = [
    "click (==8.1.8)",
    "dlib (==19.24.8)",
    "face-recognition (==1.3.0)",
    "face-recognition-models (==0.3.0)",
    "faiss-cpu (==1.8.0.post1)",
    "numpy (==1.26.3)",
    "opencv-python (==4.11.0.86)",
    "packaging (==25.0)",
    "pillow (==10.4.0)",
    "charset-normalizer (>=3.4.2,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
